src/test/ui/consts/miri_unleashed/feature-gate-unleash_the_miri_inside_of_you.stderr
error[E0493]: destructors cannot be evaluated at compile-time
  --> $DIR/feature-gate-unleash_the_miri_inside_of_you.rs:11:20
   |
LL |     const F: u32 = (U::X, 42).1;
   |                    ^^^^^^^^^^ constants cannot evaluate destructors

error: aborting due to previous error

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: aborting due to 2 previous errors

=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
